--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="robots" content="noindex"><link rel="icon" href="/favicon.ico"><title>onepager</title><script defer="defer" src="/js/chunk-vendors.b328928b.js"></script><script defer="defer" src="/js/app.91803c71.js"></script><link href="/css/app.9d167f5f.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but onepager doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
+<!DOCTYPE html>
+<html lang="">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="robots" content="noindex" />
+  </head>
+  <body>
+    SIMPLE TEST
+  </body>
+</html>
