--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html lang="">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="robots" content="noindex" />
-  </head>
-  <body>
-    SIMPLE TEST
-  </body>
-</html>
+<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="robots" content="noindex"><link rel="icon" href="/favicon.ico"><title>todoapp</title><script defer="defer" src="/js/chunk-vendors.76e3111c.js"></script><script defer="defer" src="/js/app.5a8b3f75.js"></script><link href="/css/app.c32b0ece.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but todoapp doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
